[package]
name = "my-leveldb"
version = "0.2.4"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crc = "1.2"
integer-encoding = "3.0.0"
libc = "0.2.149"
rand = "0.8.5"


errno = { optional = true, version = "0.2" }
fs2 = {optional = true, version = "0.4.3"}
tokio = { optional = true, features = ["rt", "sync"], version = ">= 1.21" }
snap = "1.1.1"

[dev-dependencies]
time-test = "0.2.3"



[features]
default = ["fs"]
async = ["tokio"]
fs = ["errno", "fs2"]

[workspace]
members = ["examples/write-a-lot", "examples/leveldb-tool"]
